fix: added a z-index to sidebar

--- a/scrybe_frontend/src/components/SideBar/SideBar.module.scss
+++ b/scrybe_frontend/src/components/SideBar/SideBar.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   width: 100vw;
   height: 100%;
+  z-index: 6;
 
   > {
     div:last-of-type {
